# filament

./: CMakeLists.txt
filament/backend/include/private/backend/: HandleAllocator.h
filament/backend/src/opengl/: OpenGLBlobCache.cpp  OpenGLBlobCache.h  ShaderCompilerService.cpp  ShaderCompilerService.h
filament/backend/src/vulkan/: VulkanHandles.cpp
filament/backend/src/webgpu/: WGPUProgram.cpp  WebGPUDriver.cpp  WebGPUDriver.h  WebGPUHandles.cpp  WebGPUHandles.h  WebGPUPipelineCache.cpp  WebGPUPipelineCache.h  WebGPUPipelineCreation.cpp  WebGPURenderPassMipmapGenerator.cpp  WebGPURenderPassMipmapGenerator.h  WebGPURenderTarget.cpp  WebGPURenderTarget.h  WebGPUSwapChain.cpp  WebGPUSwapChain.h  WebGPUTexture.cpp  WebGPUTexture.h
filament/src/: RenderPass.cpp
filament/src/details/: Material.cpp  Material.h  MaterialInstance.cpp
libs/filabridge/include/private/filament/: EngineEnums.h
libs/filamat/include/filamat/: MaterialBuilder.h
libs/filamat/src/: MaterialBuilder.cpp
libs/filamat/src/shaders/: ShaderGenerator.cpp
libs/utils/include/utils/: Hash.h
libs/viewer/src/: ViewerGui.cpp
samples/: suzanne.cpp
tools/matc/src/matc/: ParametersProcessor.cpp
tools/shader-transform-sandbox/: CMakeLists.txt
tools/shader-transform-sandbox/samples/: simple.combined.frag  simple.separate.frag
tools/shader-transform-sandbox/src/: main.cpp
tools/shader-transform-sandbox/src/shader-transform-sandbox/: ShaderTransformer.cpp  ShaderTransformer.h
